// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - DevOpsRolePage renders correctly for /devops path 1`] = `
<Page
  title="Dev Ops"
>
  <RoleBar
    label="Dev Ops"
  />
  <Section>
    <RoleContent>
      <QuoteBubble
        noCopyToClipboard={true}
        variant="thought"
      />
      <Whale
        pose="default"
      />
    </RoleContent>
  </Section>
  <ActionButtons
    role="devops"
  />
</Page>
`;

exports[`COMPONENT - DevOpsRolePage renders correctly for /devops/brag path 1`] = `
<Page
  title="Dev Ops"
>
  <RoleBar
    label="Dev Ops"
  />
  <Section>
    <RoleContent>
      <QuoteBubble
        quote="Yesterday I was implementing PUT method for missing RESTful API endpoint with complex database transactions. Also added experimental fundamental interface. I think we are missing good 'ol lorem ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit..."
      />
      <Whale
        pose="brag"
      />
    </RoleContent>
  </Section>
  <ActionButtons
    role="devops"
  />
</Page>
`;

exports[`COMPONENT - DevOpsRolePage renders correctly for /devops/confess path 1`] = `
<Page
  title="Dev Ops"
>
  <RoleBar
    label="Dev Ops"
  />
  <Section>
    <RoleContent>
      <QuoteBubble
        quote="Yesterday I was implementing PUT method for missing RESTful API endpoint with complex database transactions. Also added experimental fundamental interface. I think we are missing good 'ol lorem ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit..."
      />
      <Whale
        pose="confess"
      />
    </RoleContent>
  </Section>
  <ActionButtons
    role="devops"
  />
</Page>
`;
